3822B1PE4/9_gelu_ocl/shuravina_oksana/log.txt
In file included from /usr/include/CL/cl.h:20,
                 from /home/crazyproger/sandbox/gpu-2025/3822B1PE4/9_gelu_ocl/shuravina_oksana/gelu_ocl.cpp:2:
/usr/include/CL/cl_version.h:22:104: note: ‘#pragma message: cl_version.h: CL_TARGET_OPENCL_VERSION is not defined. Defaulting to 300 (OpenCL 3.0)’
   22 | #pragma message("cl_version.h: CL_TARGET_OPENCL_VERSION is not defined. Defaulting to 300 (OpenCL 3.0)")
      |                                                                                                        ^
/home/crazyproger/sandbox/gpu-2025/3822B1PE4/9_gelu_ocl/shuravina_oksana/gelu_ocl.cpp: In function ‘std::vector<float> GeluOCL(const std::vector<float>&, int)’:
/home/crazyproger/sandbox/gpu-2025/3822B1PE4/9_gelu_ocl/shuravina_oksana/gelu_ocl.cpp:114:45: warning: ‘_cl_command_queue* clCreateCommandQueue(cl_context, cl_device_id, cl_command_queue_properties, cl_int*)’ is deprecated [-Wdeprecated-declarations]
  114 |         command_queue = clCreateCommandQueue(context, device_id, 0, &err);
      |                         ~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/crazyproger/sandbox/gpu-2025/3822B1PE4/9_gelu_ocl/shuravina_oksana/gelu_ocl.cpp:2:
/usr/include/CL/cl.h:1906:1: note: declared here
 1906 | clCreateCommandQueue(cl_context                     context,
      | ^~~~~~~~~~~~~~~~~~~~
/home/crazyproger/sandbox/gpu-2025/3822B1PE4/9_gelu_ocl/shuravina_oksana/gelu_ocl.cpp:163:66: error: lvalue required as unary ‘&’ operand
  163 |         err |= clSetKernelArg(kernel, 2, sizeof(int), &input.size());
      |                                                        ~~~~~~~~~~^~
